--- a/src/main/res/layout/activity_demo.xml
+++ b/src/main/res/layout/activity_demo.xml
@@ -20,9 +20,24 @@
         />
 
     <ImageView
+        android:id="@+id/imgCover"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:background="#27F403"
         android:src="@drawable/funny"
         android:scaleType="centerCrop"/>
+
+    <EditText
+        android:id="@+id/eUser"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:hint="UserName"/>
+
+    <EditText
+        android:id="@+id/ePassword"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:hint="Password"
+        android:inputType="textPassword"
+        />
 </LinearLayout>
