--- a/src/main/res/layout/activity_demo.xml
+++ b/src/main/res/layout/activity_demo.xml
@@ -10,13 +10,15 @@
         android:textColor="#FF5722"
         android:textSize="20sp"
         android:textStyle="bold|italic"
-        android:background="#03A9F4"/>
+        android:background="#03A9F4"
+        android:gravity="center"/>
 
     <Button
         android:id="@+id/btLogin"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:text="LOGIN"
+        android:layout_margin="20dp"
         />
 
     <ImageView
@@ -40,4 +42,26 @@
         android:hint="Password"
         android:inputType="textPassword"
         />
+    
+    <CheckBox
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="Dong y dieu khoan"/>
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <RadioButton
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:text="Male"
+            />
+
+        <RadioButton
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:text="Female"
+            />
+    </RadioGroup>
+
 </LinearLayout>
