--- a/src/main/res/layout/relativelayout_homework.xml
+++ b/src/main/res/layout/relativelayout_homework.xml
@@ -33,7 +33,7 @@
         android:id="@+id/B3"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:background="#F44336"
+        android:background="@color/red"
         android:layout_centerHorizontal="true"
         android:text="b3"
         android:textColor="#fff"
