--- a/src/main/res/layout/linierlayout_homework2.xml
+++ b/src/main/res/layout/linierlayout_homework2.xml
@@ -1,6 +1,269 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="10">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:background="@color/black"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="123456789"
+            android:textColor="@color/white"
+            android:textSize="50dp"
+            android:textStyle="bold"
+            android:gravity="bottom|end"
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/white"
+        android:layout_weight="8"
+        android:weightSum="10"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            android:layout_weight="2"
+            android:weightSum="10"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_border"
+                android:textColor="@color/black"
+                android:textSize="50dp"
+                android:text="C"
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_border"
+                android:textColor="@color/black"
+                android:textSize="50dp"
+                android:text="+/-"
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_border"
+                android:textColor="@color/black"
+                android:textSize="50dp"
+                android:text="%"
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_specialborder"
+                android:textColor="@color/white"
+                android:textSize="50dp"
+                android:text="+/-"
+                android:textStyle="bold"
+                android:gravity="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            android:layout_weight="2"
+            android:weightSum="10"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_border"
+                android:textColor="@color/black"
+                android:textSize="50dp"
+                android:text="7"
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_border"
+                android:textColor="@color/black"
+                android:textSize="50dp"
+                android:text="8"
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_border"
+                android:textColor="@color/black"
+                android:textSize="50dp"
+                android:text="9"
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_specialborder"
+                android:textColor="@color/white"
+                android:textSize="50dp"
+                android:text="X"
+                android:textStyle="bold"
+                android:gravity="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            android:layout_weight="2"
+            android:weightSum="10"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_border"
+                android:textColor="@color/black"
+                android:textSize="50dp"
+                android:text="4"
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_border"
+                android:textColor="@color/black"
+                android:textSize="50dp"
+                android:text="5"
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_border"
+                android:textColor="@color/black"
+                android:textSize="50dp"
+                android:text="6"
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_specialborder"
+                android:textColor="@color/white"
+                android:textSize="50dp"
+                android:text="-"
+                android:textStyle="bold"
+                android:gravity="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            android:layout_weight="2"
+            android:weightSum="10"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_border"
+                android:textColor="@color/black"
+                android:textSize="50dp"
+                android:text="1"
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_border"
+                android:textColor="@color/black"
+                android:textSize="50dp"
+                android:text="2"
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_border"
+                android:textColor="@color/black"
+                android:textSize="50dp"
+                android:text="3"
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_specialborder"
+                android:textColor="@color/white"
+                android:textSize="50dp"
+                android:text="+"
+                android:textStyle="bold"
+                android:gravity="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            android:layout_weight="2"
+            android:weightSum="10"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:background="@drawable/my_border"
+                android:textColor="@color/black"
+                android:textSize="50dp"
+                android:text="0"
+                android:textStyle="bold"
+                android:gravity="center"/>
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_border"
+                android:textColor="@color/black"
+                android:textSize="50dp"
+                android:text="."
+                android:textStyle="bold"
+                android:gravity="center"/>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:background="@drawable/my_specialborder"
+                android:textColor="@color/white"
+                android:textSize="50dp"
+                android:text="="
+                android:textStyle="bold"
+                android:gravity="center"/>
+        </LinearLayout>
+    </LinearLayout>
+
 
 </LinearLayout>
