--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="red">#F44336</color>
+    <color name="black">#170C0C</color>
+    <color name="white">#fff</color>
+    <color name="grey">#ACA8A8</color>
 </resources>
