--- a/src/main/res/drawable/my_specialborder.xml
+++ b/src/main/res/drawable/my_specialborder.xml
@@ -5,5 +5,5 @@
         android:width="4dp"
         android:color="@color/white" />
     <solid
-        android:color="#FFC107"/>
+        android:color="@color/orange"/>
 </shape>
