--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="black">#170C0C</color>
     <color name="white">#fff</color>
     <color name="grey">#ACA8A8</color>
+    <color name="facebookblue">#5921F3</color>
+    <color name="orange">#FFC107</color>
 </resources>
