--- a/src/main/res/layout/relativelayout_homework2.xml
+++ b/src/main/res/layout/relativelayout_homework2.xml
@@ -1,5 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="10">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:background="@color/facebookblue">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Demo"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="30dp"
+                ></TextView>
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="6"
+            android:background="@color/white"
+            android:weightSum="10"
+            android:orientation="vertical"
+            >
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2">
+                <ImageView
+                    android:id="@+id/imageicon"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
+                    android:src="@drawable/pokemongo_logo"
+                    android:scaleType="centerInside">
 
+                </ImageView>
+                <TextView
+                    android:id="@+id/username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:text="Byrdie"
+                    android:textStyle="bold"
+                    android:layout_toRightOf="@+id/imageicon"
+                    android:gravity="center_vertical"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:text="10 phút trước"
+                    android:layout_toRightOf="@+id/imageicon"
+                    android:layout_below="@+id/username"/>
+            </RelativeLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="Pokemon Go thu về 2 tỷ đô"
+                android:layout_marginLeft="20dp"
+                />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="5"
+                android:src="@drawable/pokemongo_cover"
+                android:scaleType="centerCrop"
+                android:padding="20dp">
+
+            </ImageView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="Doanh thu pokemon go"
+                android:textStyle="bold"
+                android:layout_marginLeft="20dp"
+                android:gravity="center_vertical"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="dantri.com.vn"
+                android:layout_marginLeft="20dp"
+                android:textColor="#192EA3"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:orientation="horizontal"
+            android:weightSum="9"
+            android:background="@color/white"
+            >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="80dp"
+                android:layout_weight="3"
+                android:text="LIKE"
+                android:textColor="@color/black"
+                android:gravity="center"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:background="@drawable/my_facebookbuttonborder"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="80dp"
+                android:layout_weight="3"
+                android:text="COMMENT"
+                android:textColor="@color/black"
+                android:gravity="center"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:background="@drawable/my_facebookbuttonborder"
+                />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="80dp"
+                android:layout_weight="3"
+                android:text="SHARE"
+                android:textColor="@color/black"
+                android:gravity="center"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:background="@drawable/my_facebookbuttonborder"/>
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
