--- a/src/main/res/layout/relativelayout_homework2.xml
+++ b/src/main/res/layout/relativelayout_homework2.xml
@@ -111,7 +111,8 @@
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:background="@drawable/background_button"/>
-            <TextView
+            <Button
+                android:id="@+id/commentbt"
                 android:layout_width="0dp"
                 android:layout_height="80dp"
                 android:layout_weight="3"
