--- a/src/main/res/layout/activity_detail.xml
+++ b/src/main/res/layout/activity_detail.xml
@@ -30,4 +30,12 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
+    <TextView
+        android:id="@+id/tbUsb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        
+    >
+
+    </TextView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
