--- a/src/main/res/layout/relativelayout_homework2.xml
+++ b/src/main/res/layout/relativelayout_homework2.xml
@@ -11,7 +11,8 @@
             android:layout_height="0dp"
             android:layout_weight="2"
             android:background="@color/facebookblue">
-            <TextView
+            <Button
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Demo"
@@ -21,7 +22,7 @@
                 android:textStyle="bold"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="30dp"
-                ></TextView>
+                ></Button>
         </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -112,7 +113,7 @@
                 android:textStyle="bold"
                 android:background="@drawable/background_button"/>
             <Button
-                android:id="@+id/commentbt"
+                android:id="@+id/abcbtn"
                 android:layout_width="0dp"
                 android:layout_height="80dp"
                 android:layout_weight="3"
